# refex

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/_static/: customize.css
docs/api/: cli.rst  formatting.rst  match.rst  parsed_file.rst  search.rst  substitution.rst
docs/api/python/: evaluate.rst  matcher.rst  matchers.rst  syntactic_template.rst
docs/guide/: library.rst  patterns_templates.rst
docs/guide/errors/: index.rst  nonname_metavariables.rst
docs/guide/fixers/: attrib_default.rst  idiom.rst  index.rst  literal_comparison.rst  logging_exceptions.rst  merged.rst  mutable_constants.rst  return_none.rst  superfluous_parens.rst
docs/meta/: about.rst  contributing.rst  credits.rst
examples/: example_binary.py  example_custom_matcher.py  test_example_custom_matcher.py
refex/: .pylint.rc  cli.py  conftest.py  formatting.py  future_string.py  match.py  parsed_file.py  refex_doctest.py  rxerr_debug.py  search.py  substitution.py  test_binary.py  test_cli.py  test_example_binary.py  test_formatting.py  test_future_string.py  test_parsed_file.py  test_rxerr_debug.py  test_search.py  test_substitution.py
refex/fix/: find_fixer.py  fixer.py  generate_example.py  test_fixer.py  test_generate_example.py
refex/fix/fixers/: correctness_fixers.py  idiom_fixers.py  modern_python_fixers.py  test_correctness_fixers.py  test_idiom_fixers.py  test_modern_python_fixers.py  unittest_fixers.py
refex/python/: README.md  error_strings.py  evaluate.py  matcher.py  matcher_test_util.py  python_pattern.py  semiliteral_eval.py  syntactic_template.py  test_error_strings.py  test_evaluate.py  test_matcher.py  test_python_pattern.py  test_semiliteral_eval.py  test_syntactic_template.py
refex/python/matchers/: ast_matchers.py  base_matchers.py  extern_matchers.py  lexical_matchers.py  syntax_matchers.py  test_ast_matchers.py  test_base_matchers.py  test_extern_matchers.py  test_lexical_matchers.py  test_syntax_matchers.py
